# Comp-Graphics

./: README.md
Brightness correction/: Corrector.cpp  Corrector.h  Image.cpp  Image.h  ImageFile.cpp  ImageFile.h  README.md  main.cpp
Color spaces converter/: Converter.cpp  Converter.h  Image.cpp  Image.h  ImageFile.cpp  README.md  main.cpp
Dithering/: Dither.cpp  Dither.h  ImageFile.h  PNMImage.cpp  PNMImage.h  README.md  Utils.h  main.cpp
Line drawer/: CMakeLists.txt  ImageFile.cpp  Line.cpp  Line.h  PNMImage.cpp  PNMImage.h  README.md  Utils.h  main.cpp  testing.cpp
PNM image rotator/: README.md  main.cpp
